k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: pyapp
  namespace: micro
spec:
  selector:
    matchLabels: 
      app: pyapp
  replicas: 2
  template:
    metadata:
      labels:
        app: pyapp
    spec:
      containers:
      - name: pyapp
        image: rv2811.azurecr.io/k8s/pyappv4:latest
        ports:
        - containerPort: 80
        imagePullPolicy: Always
      imagePullSecrets:
        - name: docker-acr
