k8s/service-pyapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyapp-service
  namespace: micro
spec:
  selector:
    app.kubernetes.io/name: pyapp
  ports:
  - protocol: TCP
    port: 80
    nodePort: 30001
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: micro 
spec: 
  type: NodePort
  selector:
    app.kubernetes.io/name: postgress-db-sts
  ports:
  - protocol: TCP
    port: 5432
    nodePort: 30011
